# LocalScript

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
docker/: Dockerfile.api  Dockerfile.sandbox  README.md  safe_run.lua
docs/: ARCHITECTURE_C4.md  LOCAL_AI_STACK.md  README.md  RUNBOOK.md  VLLM_GUIDED.md
docs/c4/: README.md  components.mmd  containers.mmd  context.mmd  sequence.mmd
localscript/: __init__.py  app.py  config.py  demo_proxy.py  executil.py  extract.py  llm.py  orchestrator.py  quality_judge.py  quality_policy.py  sandbox.py  validate.py  validation_report.py
localscript/rag/: __init__.py  (+4 more)
scripts/: compress_demo_video.sh  generate_c4_submission_pdf.py  generate_presentation_pdf.py  jury_compose_smoke.sh  start_demo_gpu_proxy.sh
stands/: EVALUATION.md  README.md  REMOTE_GPU.example.md  __init__.py  jury_scenarios.yaml  mock_embedding.py  mock_llm.py  run_e2e.py  run_jury_drill.py
tests/: conftest.py  test_app.py  test_compose_layout.py  test_config_network_guard.py  test_demo_gpu_proxy.py  test_docs_readme_index.py  test_extract.py  test_instruct_research_frozen_result.py  test_jury_compose_smoke_script.py  test_jury_drill.py  test_llm.py  test_orchestrator.py  test_quality_judge.py  test_quality_policy.py  test_rag_orchestrator.py  test_rag_service_compat.py  test_runbook_compose_section.py  test_sandbox_modes.py  test_sandbox_safe_run_golden.py  test_validate.py  test_validation_report.py
(+19 files in other folders)
