[project]
name = "localscript"
version = "0.2.34"
description = "Local agent loop for Lua generation with validation pipeline (StyLua, Selene, LuaLS)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Aleksandr Mordvinov", email = "iamfuyoh@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.0.0",
    "rank-bm25>=0.2.2",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/FUYOH666/LocalScript"
Repository = "https://github.com/FUYOH666/LocalScript"
Issues = "https://github.com/FUYOH666/LocalScript/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[project.scripts]
localscript-api = "localscript.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localscript"]

[tool.hatch.build.targets.wheel.force-include]
"localscript/templates" = "localscript/templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
